# wound_EHR_analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE.md  Library  MANIFEST.in  README.md  SmartBandage_measurements.csv  SmartBandage_other.csv  Wound_management_interpreter_LLM.code-workspace  __init__.py  clean_secrets.sh  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements-streamlit.txt  requirements.txt  setup.py  setup_env.sh  streamlit_app.py  wound_EHR_analyzer.code-workspace  wound_EHR_analyzer_private.code-workspace
.devcontainer/: devcontainer.json
.streamlit/: README.md  config.toml  deployment_config.toml  packages.txt  runtime.py  secrets.toml
config/: .env  MANIFEST.in  environment.yml  pytest.ini  requirements.txt  setup.py
dataset/: SmartBandage-Data_for_llm_march_10.csv  SmartBandage-Data_for_llm_march_10.xlsx  wound_analysis_20250219_104938.docx  ~$und_analysis_20250219_104938.docx
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: docker_usage.md  index.md
documentation/: IMPEDANCE.md  INSTALL.md  configuration.md  dashboard_backup.py  docker_usage.md  sync_repos_guide.md
releases/: wound_analysis-1.5.0-py3-none-any.whl
scripts/: activate_venv.sh  install.sh  publish_to_pypi.py  publish_to_pypi.sh  release_manager.py  run_dashboard.sh  run_docker.sh  setup_conda.sh  setup_env.sh  setup_env_variables.sh  type_stubs.py
setup_config/: environment.yml  pyproject.toml  requirements.txt  type_stubs_requirements.txt
tests/: conftest.py  test_clustering_tab.py  test_column_schema.py  test_data_processor.py  test_llm_interface.py  test_main.py  test_statistical_analysis.py
wound_analysis/: HuggingFace_Multi_Modal.ipynb  Langchain_Intro.ipynb  __init__.py  app.py  app2.py  app2_refactored.py  app2_refactored_by_cascade.py  app2_refactored_by_vscode.py  app2_refactored_by_vscode_by_o3.py  column_schema.py  dashboard.py  data_processor.py  debug_app.py  diabetic_chatbot_via_ai_verde.py  llm_interface.py  main.ipynb  main.py  statistical_analysis.py  temp.ipynb  (+3 more)
(+164 files in other folders)
